added swagger for cart and category handler
