# pkg/api/handler/cart.go
@@ -20,6 +20,17 @@ func NewCartHandler(usecase interfaces.CartUseCase) *CartHandler {
 	}
 }
 
+// @Summary Add item to cart
+// @Description Add a product to the user's shopping cart
+// @Accept json
+// @Produce json
+// @Tags CART MANAGEMENT
+// @security BearerTokenAuth
+// @Param id header int true "User ID obtained from authentication"
+// @Param model body models.AddToCart true "Product details to add to the cart"
+// @Success 200 {object} response.Response "Successfully added to the cart"
+// @Failure 400 {object} response.Response "User ID retrieval failed, or fields provided in the wrong format, or error adding to the cart"
+// @Router /users/cart/add-to-cart [post]
 func (i *CartHandler) AddToCart(c *gin.Context) {
 	var model models.AddToCart
 	UserID, err := c.Get("id")
@@ -45,13 +56,19 @@ func (i *CartHandler) AddToCart(c *gin.Context) {
 	c.JSON(http.StatusOK, succesRes)
 }
 
+// @Summary Process checkout
+// @Description Process the checkout for the user's shopping cart
+// @Accept json
+// @Produce json
+// @Tags CHECKOUT
+// @security BearerTokenAuth
+// @Param id header int true "User ID obtained from authentication"
+// @Success 200 {object} response.Response "Successfully processed checkout"
+// @Failure 400 {object} response.Response "User ID retrieval failed, or error processing checkout"
+// @Router /cart/checkout [post]
 func (i *CartHandler) CheckOut(c *gin.Context) {
 	userID, _ := c.Get("id")
-	// if err != nil {
-	// 	errorRes := response.ClientResponse(http.StatusBadRequest, "user_id not in correct format", nil, err.Error())
-	// 	c.JSON(http.StatusBadRequest, errorRes)
-	// 	return
-	// }
+
 	products, err := i.usecase.CheckOut(userID.(int))
 	if err != nil {
 		errorRes := response.ClientResponse(http.StatusBadRequest, "could not open checkout", nil, err.Error())
